public/stylesheets/application.css
body, html {
  background-color: #95A5A6;
  background: url("/images/back.jpg") no-repeat center center fixed;
  background-size: cover;
}
.question-head.col.s4{
  margin-left: 0;
  margin-right: 30px;
  padding: 0;
  width: 265px;
}
.chip {
  background-color: #de4a3e;
}

#delete {
  height: 40px;
  width: 40px;
  background-color: none;
  padding-top: 2px;
}

.divider { margin-bottom: 40px; }

.user-links { color: #E53935; }
.user-links:hover {
  background: #E53935;
  color: #fff;
  padding: 2px 5px;
  border-radius: 16px;
}

.link-btn {
  background: #fff;
  opacity: 0.9;
  line-height: 50px;
}
.link-btn a { color: #E53935; }

.link-btn:hover { background: #E53935; }
.link-btn a:hover { color: #fff; }


.dank {
  margin-top: 5px;
  display: inline-block;
  width: 100%;
  height: 100%;
}

.tagged {
  display: inline-block;
  font-size: 12px;
  padding: 5px;
  line-height: 12px;
}

.delete-form {
  display:inline-block;
}
.delete-button {
  border:none;
  background: none;
}

.nav-wrapper {
  padding-right: 10px;
  padding-left: 10px;
  background-color: white;
}

.brand-logo b i {
  color: #de4a3e;
}

.dropdown-button {
  background-color: #de4a3e;
}

.dropdown-button:hover {
  background-color: #c64236;
}

#dropdown1 li a {
  background-color: #de4a3e;
  color: white;
}

#dropdown1 li a:hover {
  background-color: #c64236;
}

.container {
  padding-top: 100px;
}

.category {
  padding: 0;
  margin: 0;
  color: black;
  width: 150px;
  background-color: white;
  font-size: 20px;
  height: 50px;
  line-height: 50px;
  text-align: center;
}


.title {
  color: black;
  margin: auto;
  width: 400px;
  background-color: white;
  font-size: 25px;
  height: 50px;
  line-height: 50px;
  text-align: center;
}

.expiration {
  height: 100%;
  text-align: right;
  min-width: 230px;
}

.timeago {
  padding:13px 7px;
  color: black;
  background-color: white;
  font-size: 15px;
  height: 100px;
  line-height: 50px;
}

.question {
  margin-top: 10px;
  height: 150px;
  background-color: white;
  margin-bottom: 50px;
}

.left-vote {
  padding-left: 25px;
  font-weight: 300;
  font-size: 30px;
  line-height: 150px;
}

.right-vote {
  padding-right: 35px;
  font-weight: 300;
  font-size: 30px;
  line-height: 150px;
}

.left-button {
  padding-left: 20px;
  margin-top: -3px;
}

.question-right {
  position: relative;
  height: 150px;
}

.question-right p {
  margin: 0;
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  padding-left: 20px;
  text-align: left;
  color: black;
}

.right-button {
  text-align: right;
  padding-right: 20px;
  height: 100%;
  padding-top: 50px;
}

.question-left {
  position: relative;
  height: 150px;
}

.question-left p {
  margin: 0;
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  padding-left: 15px;
  text-align: left;
  color: black;
}

.left-button {
  text-align: left;
  padding-right: 20px;
  height: 100%;
  padding-top: 50px;
}

.thumb-up {
  background-color: #de4a3e;
}

.thumb-up:hover {
  background-color: #c64236;
}

.thumb-up:hover::after {
  background-color: #c64236;
}

/*/New*/

.container{
  padding-top: 100px;
}

.new-question {
  padding: 50px;
  background-color: white;
  margin:auto;
  width: 800px;
}

.form {
  color: black;
}

input[type=text]:focus:not([readonly]), input[type="password"]:focus:not([readonly]) {
  border-bottom: 1px solid #de4a3e;
  box-shadow: 0 1px 0 0 #de4a3e;
}

input[type=text]:focus:not([readonly])+label, input[type="password"]:focus:not([readonly])+label {
  color: #de4a3e;
}

textarea[type=text]:focus:not([readonly]), input[type="password"]:focus:not([readonly]) {
  border-bottom: 1px solid #de4a3e;
  box-shadow: 0 1px 0 0 #de4a3e;
}

textarea[type=text]:focus:not([readonly])+label, input[type="password"]:focus:not([readonly])+label {
  color: #de4a3e;
}


.select-wrapper li span{
  color: #de4a3e;
}

.submit-question-div {
  text-align: center;
}

.submit-question {
  background-color: #de4a3e;
}

.submit-question:hover {
  background-color: #c64236;
}

.draw {
margin: auto;
background-color: white;
color: black;
font-size: 20px;
width: 25%;
margin-top: 10px;
}

.created-cont {
  margin-top: 10px;
}

.created-by {
  background: #fff;
  font-size: 14px;
  margin: auto;
  width: 350px;
  min-height: 50px;
  opacity: 0.80;
  padding: 15px !important;
}

/** MEDIA QUERIES **/
@media only screen and (max-device-width: 1280px) {
  .brand-logo b i {
    font-size: 23px;
    margin-right: 150px;
  }
  nav ul a { font-size: 12px; }
  a.btn { padding: 0 10px; }

  .question-head.col.s4 {
    width: 197px;
    margin: 0;
   }
  .category {
    font-size: 14px;
    width: 120px;
   }

  .title {
    font-size: 20px;
    width: 260px;
  }

  .expiration {
    min-width: 200px;
    margin-left: 40px;
   }

  .created-by { width: 260px; }
}

@media only screen and (max-width: 1280px) {
  .brand-logo b i {
    font-size: 23px;
    margin-right: 150px;
  }
  nav ul a { font-size: 12px; }
  a.btn { padding: 0 10px; }

  .question-head.col.s4 {
    width: 197px;
    margin: 0;
   }
  .category {
    font-size: 14px;
    width: 120px;
   }

  .title {
    font-size: 20px;
    width: 260px;
  }

  .expiration {
    min-width: 200px;
    margin-left: 40px;
   }

  .created-by { width: 260px; }
}

